# a-general-LSTM-model

./: .gitignore  LICENSE  README.md  cfgs.yaml  data.csv  dataprocess.py  log.py  main.py  model.py  pyproject.toml  transformer.py
cheakpoint/training_epochs_100_stepsize_7_gamma_0.75/: model_epoch10.pth  model_epoch100.pth  model_epoch40.pth  model_epoch50.pth  model_epoch80.pth
cheakpoint/training_epochs_200_stepsize_7_gamma_0.75/: model_epoch10.pth  model_epoch110.pth  model_epoch120.pth  model_epoch140.pth  model_epoch150.pth  model_epoch160.pth  model_epoch40.pth  model_epoch80.pth  model_epoch90.pth
cheakpoint/training_epochs_80_stepsize_7_gamma_0.75/: model_epoch10.pth  model_epoch30.pth  model_epoch60.pth  model_epoch80.pth
checkpoint/training_epochs_100_stepsize_7_gamma_0.75/: model_epoch20.pth  model_epoch30.pth  model_epoch60.pth  model_epoch70.pth  model_epoch90.pth
checkpoint/training_epochs_200_stepsize_7_gamma_0.75/: model_epoch100.pth  model_epoch130.pth  model_epoch170.pth  model_epoch180.pth  model_epoch190.pth  model_epoch20.pth  model_epoch30.pth  model_epoch50.pth  model_epoch60.pth  model_epoch70.pth
checkpoint/training_epochs_80_stepsize_7_gamma_0.75/: model_epoch20.pth  model_epoch40.pth  model_epoch50.pth  model_epoch70.pth
checkpoints/training_epochs_200_stepsize_7_gamma_0.75/: model_epoch200.pth
